my-apps/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "vaultwarden.xmxxmx.us"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          port: 80
          weight: 1
